# ProteinMPNN

./: .drone.yml  .gitignore  Dockerfile  README.md  cut_version_tag.sh  helper_scripts  protein_mpnn_run.py  protein_mpnn_utils.py  pyproject.toml  setup.py  test_clusters.txt
AI_project/: best_pred_picker.py  fa_separator.py  mmtf_dataset.list  pdb_divide.py  plddt_plotter.ipynb  run_alphafold_multiple.py  single_chain_dataset_preprocessor.py
RFP_designing/: PH3G45XJ013-Alignment.json  PH3G45XJ013-Alignment.txt  PH3G45XJ013_search_strategy.asn  addgene-plasmid-132777-sequence-364379.dna  biopythontest.py  rfp_list.txt
ca_proteinmpnn/: protein_mpnn_run.py  protein_mpnn_utils.py
colab_notebooks/: README.md  ca_only_quickdemo.ipynb  quickdemo.ipynb  quickdemo_wAF2.ipynb
eGFP_designing/: .~lock.wget_list+rcsb_pdb_crystallization_20221103070417.csv#  100d.pdb1  batch_download.sh  rcsb_pdb_crystallization_20221103070417.csv  wget_list+rcsb_pdb_crystallization_20221103070417.csv  wget_list.txt
examples/: rfp_design.sh  submit_example_1.sh  submit_example_2.sh  submit_example_3.sh  submit_example_3_score_only.sh  submit_example_3_score_only_from_fasta.sh  submit_example_4.sh  submit_example_4_non_fixed.sh  submit_example_5.sh  submit_example_5_new_protocol.sh  submit_example_6.sh  submit_example_7.sh  submit_example_8.sh  submit_example_pssm.sh  submit_example_test_enzymes.sh
helper_scripts/: assign_fixed_chains.py  make_bias_AA.py  make_bias_per_res_dict.py  make_fixed_positions_dict.py  make_pssm_input_dict.py  make_tied_positions_dict.py  parse_multiple_chains.out  (+1 more)
(+1279 files in other folders)
