[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpnn"
version = "0.0.1"
authors = [
    { name="Justas Dauparas" },
    { name="Bobby Langan", email="rlangan@outpacebio.com" },
]
description = "ProteinMPNN code wrapped for bash execution, wrapped again for python execution using the OPBDesign Task interface"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]